[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqdb-api"
version = "1.0.0"
description = "Thư viện Python để tìm kiếm hình ảnh ngược trên IQDB.org."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "hieuxyz", email = "hieuxyzsmtp@gmail.com"},
]
maintainers = [
    {name = "hieuxyz", email = "hieuxyzsmtp@gmail.com"},
]
keywords = ["iqdb", "reverse", "image", "search", "anime", "manga", "cosplay"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-beautifulsoup4",
    "types-Pillow",
]

[project.urls]
Homepage = "https://github.com/hieuxyz00/iqdb-api-python"
Repository = "https://github.com/hieuxyz00/iqdb-api-python.git"
"Bug Tracker" = "https://github.com/hieuxyz00/iqdb-api-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]